--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,24 +1,20 @@
+$main-font: 'Cormorant Garamond', serif;
+$support-font: 'Roboto', sans-serif;
+
 body {
   min-height: 500px;
-
-  .flash-message-container {
-    width: 100%;
-    height: 3rem;
-    line-height: 3rem;
-    text-align: center;
-    border-bottom: 1px solid pink;
-    .flash-message {
-      font-size: 16px;
-    }
+  color: #00000096;
+  a {
+    color: #00000096;
   }
   h1 {
-    font-size: 75px;
+    font-size: 85px;
   }
   h2 {
-    font-size: 50px;
+    font-size: 45px;
   }
   h3 {
-    font-size: 25px;
+    font-size: 35px;
   }
   section {
     padding: 3rem 5rem;
@@ -34,19 +30,11 @@ body {
 }
 
 @media only screen and (max-width: 640px) {
-  body{
-    .flash-message-container {
-      height: 2.2rem;
-      line-height: 2.2rem;
-      .flash-message {
-        font-size: 14px;
-      }
-    }
-    h1 {
-      font-size: 45px;
-    }
+  h1 {
+    font-size: 60px;
   }
 }
 
+@import 'partials/header';
 @import 'partials/home';
 @import 'partials/index';
