--- a/src/scss/partials/home.scss
+++ b/src/scss/partials/home.scss
@@ -6,14 +6,7 @@
   font-weight: 300;
 
   button {
-    width: 12rem;
-    height: 4rem;
-    border-style: none;
-    border-bottom: 1px dotted #00000045;
-    font-size: 1.8rem;
-    font-family: $main-font;
-
-
+    @extend %button-style;
   }
   button:hover{
     border-bottom: 1px solid #00000045;
@@ -30,7 +23,7 @@
 
   h3{
     font-family: $support-font;
-
+    font-weight: 300;
   }
 }
 
