--- a/src/scss/partials/form.scss
+++ b/src/scss/partials/form.scss
@@ -4,7 +4,6 @@
   font-size: 1.5rem;
 }
 
-
 .form-section{
   h3{
     font-weight: 400;
@@ -32,6 +31,7 @@
       }
       input {
         @extend %input-font-set;
+        box-shadow: none;
         border-style: none;
         height: 3.5rem;
         border-bottom: 1px dotted #00000045;
