--- a/src/scss/partials/form.scss
+++ b/src/scss/partials/form.scss
@@ -4,6 +4,12 @@
   font-size: 1.5rem;
 }
 
+%input-style {
+  outline: none;
+  border-style: none;
+  box-shadow: none;
+}
+
 .form-section{
   h3{
     font-weight: 400;
