--- a/src/scss/partials/index.scss
+++ b/src/scss/partials/index.scss
@@ -1,8 +1,44 @@
-.project-container {
-  .project-list {
-    padding: 1.5rem;
-    .index-project {
-      padding: 1rem 0 3rem 0;
-    }
+.index-section {
+  background-color: mintcream;
+  padding: 2rem 4rem;
+  font-family: $support-font;
+
+  .title-section {
+    @extend %sub-title-section;
+    @extend %full-column;
+    height: 100px;
+    line-height: 5rem;
+    background-color: lavenderblush;
   }
+  .project-list-container {
+    background-color: floralwhite;
+    height: 300px;
+    display: flex;
+    overflow-y: hidden;
+    white-space: nowrap;
+    @extend %full-column;
+
+    .index-project {
+      font-family: $main-font;
+      background-color: snow;
+      white-space: normal;
+      margin: 0 0.5rem;
+      padding: 1rem;
+      height: 280px;
+      width: 280px;
+      flex: 0 0 auto;
+
+
+
+      .project-title {
+        h2 {
+          font-weight: 700;
+          padding-bottom: 0.5rem;
+          line-height: 3rem;
+        }
+      }
+    }
+
+  }
+
 }
