--- a/src/scss/partials/show.scss
+++ b/src/scss/partials/show.scss
@@ -103,7 +103,7 @@
       height: 3rem;
     }
     input:hover {
-      background-color: rgba(255, 255, 255, 1);
+      background-color: inherit;
     }
     button {
       @extend %show-button-style;
@@ -137,11 +137,8 @@
       border: 1px dotted #00000045;
       margin-top: 1.5rem;
     }
-    textarea:focus {
-      outline: none;
-    }
     textarea:hover {
-      background-color: rgba(255, 255, 255, 1);
+      background-color: inherit;
     }
   }
 
