--- a/src/scss/partials/form.scss
+++ b/src/scss/partials/form.scss
@@ -22,6 +22,7 @@
     .form-botton {
       @extend %button-style;
       text-align: left;
+      background-color: inherit;
     }
     .form-botton:hover{
       color: #363636;
@@ -41,6 +42,8 @@
         border-style: none;
         height: 3.5rem;
         border-bottom: 1px dotted #00000045;
+        background-color: rgba(255, 255, 255, 0.5);
+
       }
       input:hover{
         border-bottom: 1px solid #00000045;
@@ -49,6 +52,8 @@
       textarea{
         @extend %input-font-set;
         border: 1px dotted #00000045;
+        background-color: rgba(255, 255, 255, 0.5);
+
       }
     }
   }
