--- a/src/scss/pages/show.scss
+++ b/src/scss/pages/show.scss
@@ -19,6 +19,7 @@
   background-color: inherit;
   font-size: 1.5rem;
   font-family: $main-font;
+  outline: none;
 }
 
 .show-section {
@@ -71,12 +72,19 @@
       background-color: mintcream;
       @extend %two-columns-layout;
       font-size: 2.5rem;
+      word-break: break-word;
       .goal-container {
         @extend %two-columns-column;
       }
       .remainder-container {
         @extend %two-columns-column;
         font-weight: 500;
+      }
+      .project-fin-message {
+        font-size: 1.2rem;
+        line-height: 1.6rem;
+        padding-top: 1rem;
+        animation: bounce 3s infinite;
       }
       .italic {
         @extend %italic;
@@ -101,7 +109,7 @@
       @extend %input-style;
       @extend %input-font-set;
       height: 3rem;
-
+      outline: none;
     }
     input:hover {
       background-color: inherit;
@@ -124,11 +132,16 @@
       display: flex;
       border-bottom: 1px dotted #00000045;
       padding: 1rem 0 0.3rem 0;
+      .comment-username {
+        font-weight: 700;
+        padding-right: 0.5rem;
+      }
       .delete-comment-button {
         border-bottom: none;
         width: 1rem;
         height: 1rem;
         font-size: 1rem;
+        outline: none;
         i {
           color: #00000045;
         }
@@ -141,9 +154,13 @@
       background-color: rgba(255, 255, 255, 0.5);
       border: 1px dotted #00000045;
       margin-top: 1.5rem;
+      outline: none;
     }
     textarea:hover {
       background-color: inherit;
+    }
+    textarea:focus {
+      outline:none;
     }
   }
 
