--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,7 +62,7 @@ body {
     font-weight: 400;
     padding: 1rem 0;
     animation: bounce 3s infinite;
-    color: #00000045;
+    color: indianred;
   }
   @keyframes bounce {
   	0%, 20%, 60%, 100% {
